Update and rename 06.23- Exporting a Flow to en/flows/06.23- Exporting a Flow.md

--- a/en/flows/06.23- Exporting a Flow.md
+++ b/en/flows/06.23- Exporting a Flow.md
@@ -1,6 +1,7 @@
 Use this action to export RapidPro Flows. You can export a flow to share with other accounts or to save a specific version of your flow to use in the future.
 
-To export a flow:
+**To export a flow:**
+
 1. Go to the flows guide;
 2. Click on the flow that you want to export;
 3. Click on the configuration.
