Update and rename 06.24- Importing a Flow to en/flows/06.24- Importing a Flow.md

--- a/en/flows/06.24- Importing a Flow.md
+++ b/en/flows/06.24- Importing a Flow.md
@@ -1,8 +1,6 @@
 Use this action to import flows to your account.
 
-To import a flow to your account, you should buy credits. The accounts that didn't buy credits could not import flows.
-
-To import a flow:
+**To import a flow:**
 1. Click on your account on the top right of the page.
 
 Insert a Print
