--- a/en/campaing/08.01-Campaing Introduction.md
+++ b/en/campaing/08.01-Campaing Introduction.md
@@ -1,13 +1,13 @@
 Campaigns allow scheduled messages and flow around a specific date, as a register or bought date. Campaigns are most of the time use dripping communication*, as the maternity remembers, therapy remembers, or messages that correspond to the product or service life cycle.
 
-The message timing follows a predetermined course.
-The messages are send with a defined standard, to a specific behaviour or the addressees state.
+- The message timing follows a predetermined course.
+- The messages are send with a defined standard, to a specific behaviour or the addressees state.
 
 Dripped messages or flows are started by campaign events, that comprehends a campaign. Each campaign can contain how many events are necessary.
 
-*Dripped communication is a communication strategy that sends, or  “drip”, a pre-written message sent to clients or potential clients for a long time. The following examples use the DRIP communication model.
+*Dripped communication is a communication strategy that sends, or  “drip”, a pre-written message sent to clients or potential clients for a long time. The following examples use the DRIP communication model.*
 
-Campaigns Components 
+## Campaigns Components ##
 
 The Campaign
 
