Update and rename 08.02- Creating, archiving and activing a Campaign.md to 08.02- Creating, archiving and activating a Campaign.md

--- a/en/campaign/08.02- Creating, archiving and activating a Campaign.md
+++ b/en/campaign/08.02- Creating, archiving and activating a Campaign.md
@@ -19,7 +19,7 @@ To inactive a campaign, you should archive it. You just need to:
 
 INSERT A PRINT
 
-## Activing a Campaign ##
+## Activating a Campaign ##
 
 If you want to reactivate a campaign you should:
 
