Update and rename 07.03- Creating a Message Keyword that Allows People to Join a Group to en/triggers/07.03- Creating a Message Keyword that Allows People to Join a Group.md

--- a/en/triggers/07.03- Creating a Message Keyword that Allows People to Join a Group.md
+++ b/en/triggers/07.03- Creating a Message Keyword that Allows People to Join a Group.md
@@ -1,8 +1,8 @@
-Use this trigger to add join contact in a group. This trigger is useful to manager contacts that want to disjoin a group using the keywords “stop” or “unregister”.
+Use this trigger to add join contact in a group. This trigger is useful to manager contacts that want to disjoin a group using the keywords *“stop”* or *“unregister”*.
 
-To create a trigger with a keyword that joins contacts into a group:
+**To create a trigger with a keyword that joins contacts into a group:**
 
-1. Go to the guide “triggers”, click on the box “Create a Trigger”;
+1. Go to the guide “triggers”, click on the box “Create a Trigger”; 
 2. Click on the button “Create a Message Keyword that Allows People to Join a Group”;
 3. Introduce a keyword in “Join a Keyword”;
 4. Choose the group that you would like to add to your contacts in “Group to Join”;
