Update and rename 07.09-Ignoring a Keyword in a Flow to en/triggers/07.09-Ignoring a Keyword in a Flow.md

--- a/en/triggers/07.09-Ignoring a Keyword in a Flow.md
+++ b/en/triggers/07.09-Ignoring a Keyword in a Flow.md
@@ -2,15 +2,15 @@ When a contact sends a message that corresponds to a keyword that you defined to
 
 If you want to keep your contacts in flow until they finish or expires, you can configure to ignore the keyword until your contacts have left the first flow.
 
-To say to a flow to ignore triggers and keywords:
+**To say to a flow to ignore triggers and keywords:**
 
-1. Go to “flow” and click on the flow that you would like to modify.
+1. Go to **“flow”** and click on the flow that you would like to modify;
 
-2. Click on the gear icon on the top right of the flow editor, after that, click on the option “Edit”.
+2. Click on the gear icon on the top right of the flow editor, after that, click on the option **“Edit”**;
 
 INSERT A PRINT
 
-3. Select the box “Ignoring Keywords Triggers when you are on this flow”.
+3. Select the box **“Ignoring Keywords Triggers when you are on this flow”**;
 
 INSERT A PRINT
 
