Update and rename 09.02-Expressions Syntax to 09.02-Expressions Syntax.md

--- a/en/expressions/09.02-Expressions Syntax.md
+++ b/en/expressions/09.02-Expressions Syntax.md
@@ -2,8 +2,9 @@ The expressions syntax are modeled as they are used in Microsoft Excel™ formul
 
 INSERT A PRINT
 
-Simple Syntax: Are used to call unique values, for example:
-	Hello @contact, have you accessed the @flow.support, is it right?
+## Simple Syntax ##
+Are used to call unique values, for example:
+	-Hello @contact, have you accessed the @flow.support, is it right?
  
 The expression also can be called functional, for example:   
 	Hello @(UPPER(contact.first_name))
