--- a/en/expressions/09.02-Expressions Syntax.md
+++ b/en/expressions/09.02-Expressions Syntax.md
@@ -25,7 +25,8 @@ Expressions also can include a arithmetic calc with:
 - Subtraction (-)
 - Multiplication (*)
 - Division (/) 
-- Exponential (^):
+- Exponential (^).
+
 	**The result is @(1 + (1-3) * 4 / 5ˆ6).**
   
 Notice that, the expression is between parenthesis to say to the platform where the expression finishes.
