Update and rename 09.03- Logical Comparisons.md to 09.03- Logical Expressions.md

--- a/en/expressions/09.03- Logical Expressions.md
+++ b/en/expressions/09.03- Logical Expressions.md
@@ -1,4 +1,4 @@
-The logical comparisons is an expression that evaluates as TRUE or FALSE. This expression can use some operators: 
+The logical expressions is an expression that evaluates as TRUE or FALSE. This expression can use some operators: 
 - Equals (=);
 - Different (<>);
 - More than (>);
