Update and rename 09.05- Reference Functions to 09.05- Reference Functions.md

--- a/en/expressions/09.05- Reference Functions.md
+++ b/en/expressions/09.05- Reference Functions.md
@@ -1,27 +1,35 @@
 Function Arguments into the bracket ([…]) are optional. Notice that, when you replace variables, e.g.: @(TIMEVALUE (flow.12_hour_time.category)), the quotation marks are necessary.
 
-Date and Time Functions
+## Date and Time Functions ##
 
-DATE(year, month, day)
-Defines the new data value, for example,
-This is the date @(DATE (2012, 12, 25))
+**DATE(year, month, day)**
 
-DATEVALUE (text)
-Converts stored date in a text to a real date, using the format date configuration of your organization, for example, 
-You joined in  @(DATEVALUE (contact.joined_date))
+Defines the new data value, for example:
+- This is the date @(DATE (2012, 12, 25))
 
-DAY (date)
-Returns just the day of the month, for example,
-The actual day is @(DAY(contact.joined_date))
+**DATEVALUE (text)**
 
-DAYS(“end_date”, “start_date”)
+Converts stored date in a text to a real date, using the format date configuration of your organization, for example:
+
+- You joined in  @(DATEVALUE (contact.joined_date))
+
+**DAY (date)**
+
+Returns just the day of the month, for example:
+
+-The actual day is @(DAY(contact.joined_date))
+
+**DAYS(“end_date”, “start_date”)**
+
 Returns how many days have between two dates.
-@ (DAYS( “2016/02/28”, “2015/02/28”))
 
-DATEDIF ( “start_date”, “END_DATE”, “units”)
-Calculates how many days, months or years have between two dates.
-Units are abbreviate “D”, “M”, e “Y”.
-@ (DATADIF ( “2015/02/26”, “2016/02/26”, “M”))
+-@(DAYS( “2016/02/28”, “2015/02/28”))
+
+**DATEDIF ( “start_date”, “END_DATE”, “units”)**
+
+Calculates how many days, months or years have between two dates.Units are abbreviate “D”, “M”, e “Y”.
+
+-@(DATADIF ( “2015/02/26”, “2016/02/26”, “M”))**
 
 EDATE (date, months)
 Moves a date for the determined number of months, for example, 
@@ -67,7 +75,7 @@ YEAR (Date)
 Returns just the year, for example,
 The actual year is @(YEAR (NOW ())).
 
-Logical Functional
+## Logical Functions ##
 
 AND (arg1, arg2, …)
 Returns TRUE if and only if all arguments was evaluated as true, for example, @(AND (contact.gender = “F”, contact.age> = 18))
@@ -84,7 +92,7 @@ Returns TRUE if any argument is TRUE, for example,
 @(OR (contact.state = “GA”, contact.state = “WA”, contact.state = “IN”))TRUE()
 Returns the logical value TRUE.
 
-Math Functions 
+## Math Functions ##
 
 ABS (number)
 Returns the absolute value from a number, for example
@@ -131,7 +139,7 @@ You have @((contact.reports, contact.forms) Sum) reports and forms.
 TRUNC (number)
 Truncs a number to an integer number, removing the fractional part.
 
-Text Functions
+## Text Functions ##
 CHAR (number)
 Returns the defined character for a number, for example, 
 So easy as  @(CHAR (65)), @(CHAR (66)), @(CHAR (67))
@@ -198,9 +206,9 @@ UPPER (text)
 Converts a text sequence in Upper case, for example,
 Welcome @(UPPER (contact)) !!
 
-RapidPro Functions
+## Platform Functions ##
 
-These functions are specifics from RapidPro and are not found in the Excel, but was provided for convenience.
+These functions are specifics from the platform and are not found in the Excel, but was provided for convenience.
 
 FIELD (text, index, [delimiter])
 Refers to a field with a string split by a delimiter.
@@ -238,7 +246,8 @@ Extract a subchain of words that start in the beginner, until, but not including
 @ (WORD_SLICE ( “IlhaPush expressions are fun ”, 1, -2)) returns “IlhaPush expressions”
 @ (WORD_SLICE ( “IlhaPush expressions are fun”, -1)) returns “fun”
 
-Problems Solution
+## Problems Solution ##
+
 Why is only part of my expression evaluated?
 If the expression is not the only function or variable call, so you should put them into the brackets to RapidPro know where it starts and finishes, for example, 
 
