Update 09.05- Reference Functions.md

--- a/en/expressions/09.05- Reference Functions.md
+++ b/en/expressions/09.05- Reference Functions.md
@@ -31,49 +31,71 @@ Calculates how many days, months or years have between two dates.Units are abbre
 
 -@(DATADIF ( “2015/02/26”, “2016/02/26”, “M”))**
 
-EDATE (date, months)
-Moves a date for the determined number of months, for example, 
-The next meeting will be in @(EDATE (date.today, 1))
+**EDATE (date, months)**
 
-HOUR (DateTime)
+Moves a date for the determined number of months, for example:
+
+-The next meeting will be in @(EDATE (date.today, 1))
+
+**HOUR (DateTime)**
+
 Returns just the hour (0 to 23)
-The actual hour is @(HOUR (NOW ()))
 
-MINUTE (DateTime)
+-The actual hour is @(HOUR (NOW ()))
+
+**MINUTE (DateTime)**
+
 Returns just the minutes (0 to 59), for example
-The actual minute is @(MINUTO (NOW ()))
 
-SECOND(DateTime)
-Returns just the seconds (0 a 59), for example
-The current seconds are @(SECOND (NOW ()))
+-The actual minute is @(MINUTO (NOW ()))
 
-MONTH(Date)
-Returns just the month (1 to 12), for example,
-The actual month is @(MONTH (NOW ()))
+**SECOND(DateTime)**
 
-NOW()
-Returns the actual date and time, for example,
-It is actually @(NOW ())
+Returns just the seconds (0 a 59), for example:
 
-TIME(hour, minutes, seconds)
-Defines a time value that can be used arithmetic time, for example, 
-2 hours e 30 minutes from now will be @((date.now + TIME (2, 30, 0)))
+-The current seconds are @(SECOND (NOW ()))
 
-TIMEVALUE (text)
-Converts the hour storage in text, for example, 
-Your appointment is  @((date.today + TIMEVALUE ( “2:30”)))
+**MONTH(Date)**
 
-TODAY()
-Returns the actual date, for example,
-Today is @(TODAY ())
+Returns just the month (1 to 12), for example:
 
-WEEKDAY(Date)
-Returns the weekday (1 for Sunday to 7 for Saturday), for example,
-Today is @(WEEKDAY (DAY ())) in the week. 
+-The actual month is @(MONTH (NOW ()))
 
-YEAR (Date)
-Returns just the year, for example,
-The actual year is @(YEAR (NOW ())).
+**NOW()**
+
+Returns the actual date and time, for example:
+
+-It is actually @(NOW ())
+
+**TIME(hour, minutes, seconds)**
+
+Defines a time value that can be used arithmetic time, for example:
+
+-2 hours e 30 minutes from now will be @((date.now + TIME (2, 30, 0)))
+
+**TIMEVALUE (text)**
+
+Converts the hour storage in text, for example:
+
+-Your appointment is  @((date.today + TIMEVALUE ( “2:30”)))
+
+**TODAY()**
+
+Returns the actual date, for example:
+
+-Today is @(TODAY())
+
+**WEEKDAY(Date)**
+
+Returns the weekday (1 for Sunday to 7 for Saturday), for example:
+
+-Today is @(WEEKDAY (DAY ())) in the week. 
+
+**YEAR (Date)**
+
+Returns just the year, for example:
+
+-The actual year is @(YEAR (NOW ())).
 
 ## Logical Functions ##
 
