--- a/en/expressions/09.05- Reference Functions.md
+++ b/en/expressions/09.05- Reference Functions.md
@@ -17,261 +17,333 @@ Converts stored date in a text to a real date, using the format date configurati
 
 Returns just the day of the month, for example:
 
--The actual day is @(DAY(contact.joined_date))
+- The actual day is @(DAY(contact.joined_date))
 
 **DAYS(“end_date”, “start_date”)**
 
 Returns how many days have between two dates.
 
--@(DAYS( “2016/02/28”, “2015/02/28”))
+- @(DAYS( “2016/02/28”, “2015/02/28”))
 
 **DATEDIF ( “start_date”, “END_DATE”, “units”)**
 
 Calculates how many days, months or years have between two dates.Units are abbreviate “D”, “M”, e “Y”.
 
--@(DATADIF ( “2015/02/26”, “2016/02/26”, “M”))**
+- @(DATADIF ( “2015/02/26”, “2016/02/26”, “M”))**
 
 **EDATE (date, months)**
 
 Moves a date for the determined number of months, for example:
 
--The next meeting will be in @(EDATE (date.today, 1))
+- The next meeting will be in @(EDATE (date.today, 1))
 
 **HOUR (DateTime)**
 
 Returns just the hour (0 to 23)
 
--The actual hour is @(HOUR (NOW ()))
+- The actual hour is @(HOUR (NOW ()))
 
 **MINUTE (DateTime)**
 
 Returns just the minutes (0 to 59), for example
 
--The actual minute is @(MINUTO (NOW ()))
+- The actual minute is @(MINUTO (NOW ()))
 
 **SECOND(DateTime)**
 
 Returns just the seconds (0 a 59), for example:
 
--The current seconds are @(SECOND (NOW ()))
+- The current seconds are @(SECOND (NOW ()))
 
 **MONTH(Date)**
 
 Returns just the month (1 to 12), for example:
 
--The actual month is @(MONTH (NOW ()))
+- The actual month is @(MONTH (NOW ()))
 
 **NOW()**
 
 Returns the actual date and time, for example:
 
--It is actually @(NOW ())
+- It is actually @(NOW ())
 
 **TIME(hour, minutes, seconds)**
 
 Defines a time value that can be used arithmetic time, for example:
 
--2 hours e 30 minutes from now will be @((date.now + TIME (2, 30, 0)))
+- 2 hours e 30 minutes from now will be @((date.now + TIME (2, 30, 0)))
 
 **TIMEVALUE (text)**
 
 Converts the hour storage in text, for example:
 
--Your appointment is  @((date.today + TIMEVALUE ( “2:30”)))
+- Your appointment is  @((date.today + TIMEVALUE ( “2:30”)))
 
 **TODAY()**
 
 Returns the actual date, for example:
 
--Today is @(TODAY())
+- Today is @(TODAY())
 
 **WEEKDAY(Date)**
 
 Returns the weekday (1 for Sunday to 7 for Saturday), for example:
 
--Today is @(WEEKDAY (DAY ())) in the week. 
+- Today is @(WEEKDAY (DAY ())) in the week. 
 
 **YEAR (Date)**
 
 Returns just the year, for example:
 
--The actual year is @(YEAR (NOW ())).
+- The actual year is @(YEAR (NOW ())).
 
 ## Logical Functions ##
 
-AND (arg1, arg2, …)
-Returns TRUE if and only if all arguments was evaluated as true, for example, @(AND (contact.gender = “F”, contact.age> = 18))
+**AND (arg1, arg2, …)**
 
-FALSO ()
+Returns TRUE if and only if all arguments was evaluated as true, for example:
+
+- @(AND (contact.gender = “F”, contact.age> = 18))
+
+**FALSO ()** 
+
 Returns the logical value FALSE.
 
-IF (arg1, arg2, …)
-Returns the value if the condition was evaluated as TRUE, and another value was evaluated as FALSE, for example,
-Dear @(IF (contact.gender = “M”, “Mr.”, “Mrs.”))
+**IF (arg1, arg2, …)**
 
-OR (arg1, arg2, …)
-Returns TRUE if any argument is TRUE, for example, 
-@(OR (contact.state = “GA”, contact.state = “WA”, contact.state = “IN”))TRUE()
+Returns the value if the condition was evaluated as TRUE, and another value was evaluated as FALSE, for example:
+
+- Dear @(IF (contact.gender = “M”, “Mr.”, “Mrs.”))
+
+**OR (arg1, arg2, …)**
+
+Returns TRUE if any argument is TRUE, for example: 
+
+- @(OR (contact.state = “GA”, contact.state = “WA”, contact.state = “IN”))TRUE()
 Returns the logical value TRUE.
 
 ## Math Functions ##
 
-ABS (number)
-Returns the absolute value from a number, for example
-The -1 absolute value is @ (ABS (-1))
+**ABS (number)**
 
-Average(number, …)
+Returns the absolute value from a number, for example:
+
+- The -1 absolute value is @ (ABS (-1))
+
+**Average(number, …)**
+
 Returns the arguments average (arithmetic average).
 
-MAX (arg1, arg2, …)
-Returns the max value between all arguments, for example, 
-Please, fill in, maximum @(MAX (flow.questions, 10)) questions.
+**MAX (arg1, arg2, …)**
 
-MIN (arg1, arg2, …)
-Returns the minimum value between all arguments, for example, 
-Please, fill in, at least @((flow.questions, 10) MIN) questions.
+Returns the max value between all arguments, for example:
 
-POWER (number, potency)
-Returns the result from a number elevate to a potency - equivalent to the operator ^, for example,
-2 elevate to the third potency is @(POWER (2, 3)).
+- Please, fill in, maximum @(MAX (flow.questions, 10)) questions.
 
-RAND ()
-Returns an aleatory real number between 0 and 1, for example,
-0,6160317611
+**MIN (arg1, arg2, …)**
 
-RANDBETWEEN (number 1, number 2)
+Returns the minimum value between all arguments, for example:
+
+- Please, fill in, at least @((flow.questions, 10) MIN) questions.
+
+**POWER (number, potency)**
+
+Returns the result from a number elevate to a potency - equivalent to the operator ^, for example:
+
+- 2 elevate to the third potency is @(POWER (2, 3)).
+
+**RAND ()**
+
+Returns an aleatory real number between 0 and 1, for example:
+
+- 0,6160317611
+
+**RANDBETWEEN (number 1, number 2)**
+
 Returns an aleatory entire number between two numbers.
 
-ROUND (number, how many digits)
+**ROUND (number, how many digits)**
+
 Rounds a number to a number with a specific number of digits
-@ (ROUND (9,4378, 3))
 
-ROUNDDOWN (number, how many digits)
+- @(ROUND (9,4378, 3))
+
+**ROUNDDOWN (number, how many digits)**
+
 Rounds down the number to zero with a specific number of digits.
-@ (ROUNDDOWN (9,4378, 3))
 
-ROUNDUP (number, how many digits)
+- @(ROUNDDOWN (9,4378, 3))
+
+**ROUNDUP (number, how many digits)**
+
 Rounds up a number to zero with a specific number of digits.
-@ (Roundup (9,4378, 2))
 
-SUM (arg1, arg2, …)
-Returns the sum of all arguments, equivalent to the operator +, for example,
-You have @((contact.reports, contact.forms) Sum) reports and forms.
+- @(Roundup (9,4378, 2))
 
-TRUNC (number)
+**SUM (arg1, arg2, …)**
+
+Returns the sum of all arguments, equivalent to the operator +, for example:
+
+- You have @((contact.reports, contact.forms) Sum) reports and forms.
+
+**TRUNC (number)**
+
 Truncs a number to an integer number, removing the fractional part.
 
 ## Text Functions ##
-CHAR (number)
-Returns the defined character for a number, for example, 
-So easy as  @(CHAR (65)), @(CHAR (66)), @(CHAR (67))
 
-CLEAN(text)
-Removes all characters not printable from text, for example,
-@(CLEAN(step.value))
+**CHAR (number)**
 
-CODE(text)
-Returns a numerical code to the first character from text, for example,
-The A numerical code is @(CODE ( “A”))
+Returns the defined character for a number, for example:
 
-CONCATENATE(args)
+- So easy as  @(CHAR (65)), @(CHAR (66)), @(CHAR (67))
+
+**CLEAN(text)**
+
+Removes all characters not printable from text, for example:
+
+- @(CLEAN(step.value))
+
+**CODE(text)**
+
+Returns a numerical code to the first character from text, for example:
+
+- The A numerical code is @(CODE ( “A”))
+
+**CONCATENATE(args)**
+
 Concatenates texts in just one text, for example,
-Your name is @(CONCATENATE (contact.first_name, ” “, contact.last_name))
 
-FIXED (number, [decimais], [no_commas])
+- Your name is @(CONCATENATE (contact.first_name, ” “, contact.last_name))
+
+**FIXED (number, [decimais], [no_commas])**
+
 Formats the given number to a decimal format, using a semicolon
-You have @ (FIXED(contact.balance, 2)) in your account.
 
-INT (number)
+- You have @ (FIXED(contact.balance, 2)) in your account.
+
+**INT (number)**
 Rounds down a number to the closest integer number.
 
-LEFT (text, num_chars)
-Returns the first characters in a text, for example,
-You get in PIN @(LEFT (step.value, 4))
+**LEFT (text, num_chars)**
 
-LEN (text)
-Returns how many characters are in a text, for example,
-You get in with @(LEN(step.value)) characters.
+Returns the first characters in a text, for example:
 
-LOWER (text)
-Converts text in lower case, for example,
-Welcome to @(LOWER (contact))
+- You get in PIN @(LEFT (step.value, 4))
 
-MOD (number, divider)
+**LEN (text)**
+
+Returns how many characters are in a text, for example:
+
+- You get in with @(LEN(step.value)) characters.
+
+**LOWER (text)**
+
+Converts text in lower case, for example:
+
+- Welcome to @(LOWER (contact))
+
+**MOD (number, divider)**
+
 Returns the rest of the division.
 
-PROPER (text)
-Defines the first letter of each word as an upper case, for example
-Your name is @(Proper (contact))
+**PROPER (text)**
 
-REPT (text, how many times)
-Repeats the text in a determined number of times, for example,
-Stars! @(REPT( “*”, 10))
+Defines the first letter of each word as an upper case, for example:
 
-RIGHT (text, num_chars)
-Returns the text last characters, for example,
-Your answer finished with… @(RIGHT(step.value, 3))
+- Your name is @(Proper (contact))
 
-SUBSTITUTE (text, old_text, new_text, [num_ instância])
-Substitutes NEW_TEXT to OLD_TEXT in a text. If the text was given, so just this text will be replaced, for example,
-@(SUBSTITUTE(step.value, “can not”, “can”))
+**REPT (text, how many times)**
 
-UNICHAR(number)
-Returns the character Unicode specified by a number, for example, 
-So easy as @(UNICHAR (65)), @(UNICHAR (66)), @(UNICHAR (67))
+Repeats the text in a determined number of times, for example:
 
-UNICODE (text)
-Returns a numerical code of the first character from the text, for example, 
-The A numerical code is @(Unicode ( “A”))
+- Stars! @(REPT( “*”, 10))
 
-UPPER (text)
-Converts a text sequence in Upper case, for example,
-Welcome @(UPPER (contact)) !!
+**RIGHT (text, num_chars)**
+
+Returns the text last characters, for example:
+
+- Your answer finished with… @(RIGHT(step.value, 3))
+
+**SUBSTITUTE (text, old_text, new_text, [num_ instância])**
+
+Substitutes NEW_TEXT to OLD_TEXT in a text. If the text was given, so just this text will be replaced, for example:
+
+- @(SUBSTITUTE(step.value, “can not”, “can”))
+
+**UNICHAR(number)**
+
+Returns the character Unicode specified by a number, for example:
+
+- So easy as @(UNICHAR (65)), @(UNICHAR (66)), @(UNICHAR (67))
+
+**UNICODE (text)**
+
+Returns a numerical code of the first character from the text, for example:
+
+- The A numerical code is @(Unicode ( “A”))
+
+**UPPER (text)**
+
+Converts a text sequence in Upper case, for example:
+
+- Welcome @(UPPER (contact)) !!
 
 ## Platform Functions ##
 
 These functions are specifics from the platform and are not found in the Excel, but was provided for convenience.
 
-FIELD (text, index, [delimiter])
+**FIELD (text, index, [delimiter])**
+
 Refers to a field with a string split by a delimiter.
-@FIELD ( “Hello World”, 2 “,”)
 
-FIRST_WORD (text)
+- @FIELD ( “Hello World”, 2 “,”)
 
-Returns the first word of  the given text, for example, 
-The first word that you typed was @(FIRST_WORD (step.value))
+**FIRST_WORD (text)**
 
-PERCENT (number)
-Formats a number as a percentage, for example, 
-You completed @(PERCENT(contact.reports_done / 10)) reports
+Returns the first word of  the given text, for example:
 
-READ_DIGITS (text)
-Formats the dialog in a text to read in TTS, for example,
-Your number is @(READ_DIGITS(contact.tel_e164))
+- The first word that you typed was @(FIRST_WORD (step.value))
 
-REMOVE_FIRST_WORD (text)
+**PERCENT (number)**
+
+Formats a number as a percentage, for example:
+
+- You completed @(PERCENT(contact.reports_done / 10)) reports
+
+**READ_DIGITS (text)**
+
+Formats the dialog in a text to read in TTS, for example:
+
+- Your number is @(READ_DIGITS(contact.tel_e164))
+
+**REMOVE_FIRST_WORD (text)**
+
 Removes the first word from the given text. The rest of the text will not be altered, for example:
-You typed @(REMOVE_FIRST_WORD (step.value))
 
-WORD (text, number, [by_spaces])
-Extract the word from a text. If the number defined by a negative number, it is treated as a decrescent count starting at the end of the text. If the by_spaces specified as TRUE, so the function split the text in words just for spaces. On the contrary, the text is split for punctuation characters, for example,
+- You typed @(REMOVE_FIRST_WORD (step.value))
 
-@ (WORD ( “Hello cow-boy”, 2)) will return “cow”
-@ (WORD ( “Hello cow-boy”, 2, TRUE)) will return “cow-boy”
-@ (WORD ( “Hello cow-boy”, -1)) will return “boy”
+**WORD (text, number, [by_spaces])**
 
-WORD_SLICE (text, start [stop], [by_spaces])
-Extract a subchain of words that start in the beginner, until, but not including the STOP. If STOP is omitted so the substring will be all words from the beginner to the end of the text. If the stop is a negative number, he is treated as a decrescent count from the end of the text. If by_spaces is specified and this is true, so the function split the text in words just for spaces. On the contrary, the text is split by punctuation characters, for example, 
+Extract the word from a text. If the number defined by a negative number, it is treated as a decrescent count starting at the end of the text. If the by_spaces specified as TRUE, so the function split the text in words just for spaces. On the contrary, the text is split for punctuation characters, for example:
 
- @(WORD_SLICE ( “IlhaPush expressions are fun”, 2, 3)) returns the 2º and 3º  words “expressions are”
-@ (WORD_SLICE ( “IlhaPush expressions are fun”, 2)) returns “expressions are fun”
-@ (WORD_SLICE ( “IlhaPush expressions are fun ”, 1, -2)) returns “IlhaPush expressions”
-@ (WORD_SLICE ( “IlhaPush expressions are fun”, -1)) returns “fun”
+- @ (WORD ( “Hello cow-boy”, 2)) will return “cow”
+- @ (WORD ( “Hello cow-boy”, 2, TRUE)) will return “cow-boy”
+- @ (WORD ( “Hello cow-boy”, -1)) will return “boy”
+
+**WORD_SLICE (text, start [stop], [by_spaces])**
+
+Extract a subchain of words that start in the beginner, until, but not including the STOP. If STOP is omitted so the substring will be all words from the beginner to the end of the text. If the stop is a negative number, he is treated as a decrescent count from the end of the text. If by_spaces is specified and this is true, so the function split the text in words just for spaces. On the contrary, the text is split by punctuation characters, for example:
+
+- @(WORD_SLICE ( “IlhaPush expressions are fun”, 2, 3)) returns the 2º and 3º  words “expressions are”
+- @ (WORD_SLICE ( “IlhaPush expressions are fun”, 2)) returns “expressions are fun”
+- @ (WORD_SLICE ( “IlhaPush expressions are fun ”, 1, -2)) returns “IlhaPush expressions”
+- @ (WORD_SLICE ( “IlhaPush expressions are fun”, -1)) returns “fun”
 
 ## Problems Solution ##
 
-Why is only part of my expression evaluated?
+**Why is only part of my expression evaluated?**
 If the expression is not the only function or variable call, so you should put them into the brackets to RapidPro know where it starts and finishes, for example, 
 
-@ (SUM (contact.reports, step.value)) * 2 <- o “* 2” is not evaluated, should be written as: 
-@ (SUM (contact.reports, step.value) * 2)
+- @ (SUM (contact.reports, step.value)) * 2 <- o “* 2” is not evaluated, should be written as: 
+- @ (SUM (contact.reports, step.value) * 2)
