Fixed channels intro title

--- a/02.01-Channels Introduction.md
+++ b/02.01-Channels Introduction.md
@@ -25,7 +25,7 @@ Discount for unprofitable organizations: Twilio offer US$ 500 in credits and 25%
 - Want to implement in a country where the virtual numbers and shortcodes are not available yet.
 - Transmitter tax is a message per second.
 
-### Sending Bulk
+### Bulk Sending
 
 This channel is ideal for Android channels implementations that need to send more than 330 messages per hour. It implicates in to create and connect a Nexmo account for your RapidPro account. When you enable the Sending Bulk, Nexmo will take care of your sending messages, keeping the sender identification in your Android Cell Phone, and your Android will take care of the received messages. The transfer tax is a message per second. Click here to get more information about the Nexmo development in your country.
 
