Update 08.02- Creating, archiving and activating a Campaign.md

--- a/en/campaign/08.02- Creating, archiving and activating a Campaign.md
+++ b/en/campaign/08.02- Creating, archiving and activating a Campaign.md
@@ -3,11 +3,16 @@ A campaign requires a name and a contact group to receive the events. Each campa
 ## Creating a Campaign ##
 
 1. Go to the campaign guide.
+
+![](/img/campaign/campaign1.png)
+
 2. Click on the “Create Campaign” button on the top left of the page.
 
-INSERT A PRINT
+![](/img/campaign/campaign2.png)
 
 3. Define the campaign name and which group will be connect
+
+![](/img/campaign/campaign3.png)
 
 ## Archiving a Campaign ##
 
@@ -17,7 +22,7 @@ To inactive a campaign, you should archive it. You just need to:
 
 2. Click on the archive icon.
 
-INSERT A PRINT
+![](/img/campaign/campaign4.png)
 
 ## Activating a Campaign ##
 
@@ -25,8 +30,8 @@ If you want to reactivate a campaign you should:
 
 1. Access the “Archived” field on the campaign guide.
 
-INSERT A PRINT
+![](/img/campaign/campaign5.png)
 
 2. Select the campaign that you want to active and click on the activation icon.
 
-INSERT A PRINT
+![](/img/campaign/campaign6.png)
