--- a/en/campaign/08.03- Adding and Editing an Event to the Campaign.md
+++ b/en/campaign/08.03- Adding and Editing an Event to the Campaign.md
@@ -4,18 +4,20 @@ A campaign event represents an action that will realize a relation with a date a
 
 1. Go to the Campaign Event guide, click on the campaign that you would like to add an event.
 
-INSERT A PRINT
+![](/img/campaign/campaign10.png)
  
 2. Click on the box “Add Event” on the top right.
 
 3. Select the action that you want to attribute an event.
+
+![](/img/campaign/campaign12.png)
 
 4. Define the date and time that you want that your event start (it is referred to as the “offset”). The following entries comprehend a displacement:
 - How many minutes, hours, days, weeks, before or after to select the contact field.
 - The contact field selected.
 - The moment when the event will start.
 
-INSERT A PRINT
+![](/img/campaign/campaign11.png)
 
 You can add how many events as necessary.
 
@@ -25,11 +27,11 @@ To edit when a message or flow will be sent, alter the flow, or change the actio
 
 1. Click on the icon “Campaign” on the top right of the page, and click on the campaign that contains the event that you would like to edit.
 
-INSERT PRINT
+![](/img/campaign/campaign13.png)
 
 2. Click on the box “Registration Date” to open the event that you want to edit. Notice that you also can access the group contacts and the flows associated with a event on this page, you just need to click on the hyperlink. 
 
-INSERT A PRINT
+![](/img/campaign/campaign14.png)
 
 3. Click on the box “Edit” on the top right of the page.
 
@@ -39,6 +41,6 @@ Starting a flow to send a message;
 The flow is started;
 When the flow is started or the message is sent.
 
-INSERT A PRINT
+![](/img/campaign/campaign15.png)
 
 5. Click on “Ok” to save the alterations.
