Update 02.03- Adding Channels.md

--- a/en/channels/02.03- Adding Channels.md
+++ b/en/channels/02.03- Adding Channels.md
@@ -2,7 +2,7 @@
 
 1. Click on your account on the top right of the page;
 
-INSERT A PRINT
+![](/img/channel/account.png)
 
 2. Click on the gear icon;
 
