Update 07.02- Creating a Message Keyword that Launches a Flow.md

--- a/en/triggers/07.02- Creating a Message Keyword that Launches a Flow.md
+++ b/en/triggers/07.02- Creating a Message Keyword that Launches a Flow.md
@@ -4,11 +4,11 @@ The keyword is the first word in a message and can be used to start the flow. Fo
 
 1. Go to the guide **“Triggers”**, click on the box **“Create Trigger”**;
 
-INSERT A PRINT
+![](/img/triggers/triggers1.png)
 
 2. Click on the button **“Create a keyword that launches a flow”**;
 
-INSERT A PRINT
+![](/img/triggers/triggers2.png)
 
 3. In **“keyword”** you can define a word to works as a keyword;
 
@@ -21,3 +21,5 @@ INSERT A PRINT
 6. In **only groups”**, is possible to apply the rules from this trigger to specific contact groups, just leave the blank space if you want to apply this rule to all user;
 
 7. Click on the box **“Create Trigger”**.
+
+![](/img/triggers/triggers3.png)
