--- a/en/triggers/07.04- Start a Flow in the Future or on a Schedule.md
+++ b/en/triggers/07.04- Start a Flow in the Future or on a Schedule.md
@@ -4,7 +4,11 @@ Use this trigger to schedule a flow in a moment in the future, repeat it daily, 
 
 1. Go to the guide *“Triggers”* and click on the box *“Create a Trigger”*;
 
+![](/img/triggers/triggers1.png)
+
 2. Click on the button *“Start a Flow in the Future or on a Schedule”*;
+
+![](/img/triggers/triggers7.png)
 
 3. Choose the flow that you want to start, which contacts or groups the flow will broadcast to;
 
@@ -12,4 +16,4 @@ Use this trigger to schedule a flow in a moment in the future, repeat it daily, 
 
 5. Click on the box *“Create Trigger”*.
 
-Insert a Print
+![](/img/triggers/triggers6.png)
