--- a/en/triggers/07.06- Start a Flow After a Missed Call.md
+++ b/en/triggers/07.06- Start a Flow After a Missed Call.md
@@ -1,8 +1,14 @@
 **Use this trigger to start a flow after a missed call. To start a flow after a missed call:**
 
 1. Go to the guide **“Triggers”** and click on the box **“Create a Trigger”**.
+
+![](/img/triggers/triggers1.png)
+
 2. Click on the button **“Start a Flow After a Missed Call”**.
+
+![](/img/triggers/triggers12.png)
+
 3. In **“Flow”**, you can choose which flow will be started.
 4. Click on **“Create Trigger”**.
 
-Insert a Print
+![](/img/triggers/triggers13.png)
