--- a/en/triggers/07.08-Start a Flow After Receiving a Message Not Handled Elsewhere.md
+++ b/en/triggers/07.08-Start a Flow After Receiving a Message Not Handled Elsewhere.md
@@ -4,10 +4,16 @@ Use this trigger to start a flow after receiving an uncaught message (the messag
 
 1. Go to the guide **“Triggers”** and click on the box **“Create a Trigger”**.
 
+![](/img/triggers/triggers1.png)
+
 2. Click on the **“Start a flow after receiving a message not handled elsewhere”** button.
+
+![](/img/triggers/triggers16.png)
 
 3. In **“Flow”**, choose the flow that you want to start.
 
 4. In **“Only Groups”** you can choose the group(s) that the trigger will be applied, if you leave the field empty, the trigger will be applied to all contacts.
 
 5. Click on the **“Create Trigger”**.
+
+![](/img/triggers/triggers17.png)
