--- a/en/triggers/07.09-Ignoring a Keyword in a Flow.md
+++ b/en/triggers/07.09-Ignoring a Keyword in a Flow.md
@@ -8,10 +8,10 @@ If you want to keep your contacts in flow until they finish or expires, you can 
 
 2. Click on the gear icon on the top right of the flow editor, after that, click on the option **“Edit”**;
 
-INSERT A PRINT
+![](/img/triggers/triggers18.png)
 
 3. Select the box **“Ignoring Keywords Triggers when you are on this flow”**;
 
-INSERT A PRINT
+![](/img/triggers/triggers19.png)
 
 4. Click on Save alterations.
