Update 05.02- Creating a Group.md

--- a/en/groups/05.02- Creating a Group.md
+++ b/en/groups/05.02- Creating a Group.md
@@ -1,19 +1,27 @@
-#### How to create a group manually ####
+## How to create a group ##
 
 1. Go to “Contacts” on the top right of the page;
 
+![](/img/groups/contact.png)
+
 2. Click on the box “Create Groups” on the bottom left of the page;
+
+![](/img/groups/create_contact.png)
 
 3. Give to your group a name and click on the box “Create”. The new group will appear in the group directory on the bottom left of the page.
 
-#### How to create a group through a flow ####
+![](/img/groups/Create_group.png)
 
-#### How to delete a group manually ###
+## How to delete a group ##
 
-1. Go to “Groups” guide;
+1. Go to “Contacts” guide;
+
+![](/img/groups/contact.png)
+
 2. Click on the group that you want to delete;
-2. Select the option “Delete Group” on the drop-down menu clicking on the gear icon.
 
-INSERT A PRINT
+![](/img/groups/groups.png)
 
-#### How to delete a group through a flow ####
+3. Select the option “Delete Group” on the drop-down menu clicking on the gear icon.
+
+![](/img/groups/Delete_group.png)
