Update 05.03- Adding or Removing a Contact to a Group.md

--- a/en/groups/05.03- Adding or Removing a Contact to a Group.md
+++ b/en/groups/05.03- Adding or Removing a Contact to a Group.md
@@ -29,6 +29,6 @@
 
 2. Choose a group on the left side of the page;
 
-![](/img/groups/contacts - cópia.png)
+![](/img/groups/contacts2.png)
 
 3. Choose the contact(s) that you want to remove from a group, then click on remove from group icon.
