--- a/en/groups/05.04-Dynamic Groups.md
+++ b/en/groups/05.04-Dynamic Groups.md
@@ -1,9 +1,13 @@
 Resulting consults groups are called dynamics groups. Dynamic groups are the only ones that still have contacts added automatically if the contacts correspond to the consult.
 
 #### Creating a Dynamic Group ####
-When you insert a consult, the platform will return the contacts groups resulted. You can save this new group clicking on “Save as a Group” button, located under the search bar.
+1.When you insert a consult, the platform will return the contacts groups resulted. 
+
+![](/img/groups/groups2.png) 
+
+2.You can save this new group clicking on “Save as a Group” button, located under the search bar.
  
-INSERT A PRINT
+![](/img/groups/groups3.png) 
 
 #### Consulting ####
 Consult is what you will operate in all contacts fields presents in your account. Notice that, the fields and values are not case sensitive (they don't differ upper and lower case) in the consult.
