--- a/en/telegram/10.01-Introduction to Telegram Channel.md
+++ b/en/telegram/10.01-Introduction to Telegram Channel.md
@@ -10,6 +10,7 @@ Exists 5 important reasons that make Telegram our first choice to messages based
 5. Telegram provides a web app; a desktop version to Mac, Windows e Linux; and mobile apps to iOS and Android devices. It can be used at any place with an available internet connection.
 
 **How does it work?**
+
 Your Telegram channel will be represented by a bot. Telegram Bots are special accounts that will work as an interface for the flows and messages that will be sent by IlhaPush. Bots differ from the standard accounts because they: 
 
 1. Don't have online status or the last message seen, the interface shows the label ‘bot’.
@@ -19,5 +20,26 @@ Your Telegram channel will be represented by a bot. Telegram Bots are special ac
 So similar with the ilhapush, the telegram bots allow to create personalized tools that provide warnings, forecast, translations, and different services.
 
 #### Broadcast Message ####
+
 Normally the Telegram does not provide a method to send broadcast messages or notifications.
 A bot did not connect to the Plataform can not start conversations with new users. A new user should add them to a group or send a message, they can use the [link](telegram.me/~~number=plural<bot_username>), or search the user name to find your bot. But, when a bot is connected to your account, your telegram contacts will become contacts on the plataform, this allows you to boost our diffusion functionality to start conversations and send notifications easily.
+
+## How to add a Telegram Channel? ## 
+
+1. Go to your account.
+
+2. Click on the gear icon and after that click on “Add Channel”
+
+3. Select the Telegram channel that is located on the social networking list.
+
+4. Will be solicited an authentication token that will be generated as you do the Telegram registration. To do this access your Telegram account and search for @Botfather.
+
+5. You need to answer some questions to create the Bot:
+
+-What is the bot name, e.g.: Platform
+-The bot name finishing with bot, e.g.: Platform_bot 2.1 Obs. : The bot name cannot have more than 16 characters
+-So, the token will be sent.
+
+6. Copy the generated Token and paste on the Authentication Token field on the platform, after that click on the Connect Telegram Bot.
+
+At this moment your bot is working.
