Update 10.01-Introduction to Telegram Channel.md

--- a/en/telegram/10.01-Introduction to Telegram Channel.md
+++ b/en/telegram/10.01-Introduction to Telegram Channel.md
@@ -36,9 +36,9 @@ A bot did not connect to the Plataform can not start conversations with new user
 
 5. You need to answer some questions to create the Bot:
 
--What is the bot name, e.g.: Platform
--The bot name finishing with bot, e.g.: Platform_bot 2.1 Obs. : The bot name cannot have more than 16 characters
--So, the token will be sent.
+- The bot name, e.g.: Platform
+- The bot name finishing with bot, e.g.: Platform_bot 2.1 Obs. : The bot name cannot have more than 16 characters
+- So, the token will be sent.
 
 6. Copy the generated Token and paste on the Authentication Token field on the platform, after that click on the Connect Telegram Bot.
 
