--- a/en/telegram/10.01-Introduction to Telegram Channel.md
+++ b/en/telegram/10.01-Introduction to Telegram Channel.md
@@ -28,11 +28,17 @@ A bot did not connect to the Plataform can not start conversations with new user
 
 1. Go to your account.
 
+![](/img/channel/account.png)
+
 2. Click on the gear icon and after that click on “Add Channel”
 
 3. Select the Telegram channel that is located on the social networking list.
 
+![](/img/channel/telegram.png)
+
 4. Will be solicited an authentication token that will be generated as you do the Telegram registration. To do this access your Telegram account and search for @Botfather.
+
+![](/img/channel/add_telegram.png)
 
 5. You need to answer some questions to create the Bot:
 
@@ -40,6 +46,10 @@ A bot did not connect to the Plataform can not start conversations with new user
 - The bot name finishing with bot, e.g.: Platform_bot 2.1 Obs. : The bot name cannot have more than 16 characters
 - So, the token will be sent.
 
+![](/img/channel/token_telegram.png)
+
 6. Copy the generated Token and paste on the Authentication Token field on the platform, after that click on the Connect Telegram Bot.
+
+![](/img/channel/delete_channel.png)
 
 At this moment your bot is working.
