--- a/en/channels/02.03- Adding Channels.md
+++ b/en/channels/02.03- Adding Channels.md
@@ -6,14 +6,14 @@
 
 2. Click on the gear icon;
 
-INSERT A PRINT
+![](/img/channel/channel4.png)
 
 3. Click on the Add Channel button;
 
-INSERT A PRINT
+![](/img/channel/channel3.png)
 
 4. You will see a list with all channels available at the moment;
 
-INSERT A PRINT
+![](/img/channel/channel2.png)
 
 5. Choose the channel(s) that you want to add.
