Update 02.04-Deleting a Channel.md

--- a/en/channels/02.04-Deleting a Channel.md
+++ b/en/channels/02.04-Deleting a Channel.md
@@ -2,16 +2,12 @@
 
 1. Click on the account button located on the top right;
 
-INSERT A PRINT
+![](/img/channel/account.png) 
 
 2. Click on the channel that you want to remove.
 
-INSERT A PRINT
+![](/img/channel/channel5.png) 
 
-3. Click on the gear icon;
+3. Click on the gear icon and Remove;
 
-INSERT A PRINT
-
-4. Click on Remove button;
-
-INSERT A PRINT
+![](/img/channel/channel6.png) 
