Update 02.05-Using a Android CellPhone as a Channel.md

--- a/en/channels/02.05-Using a Android CellPhone as a Channel.md
+++ b/en/channels/02.05-Using a Android CellPhone as a Channel.md
@@ -28,27 +28,27 @@ Installing the Android Application, to review, you'll need:
 
 1. Open the .apk file you received (Android Channel - Ilhasoft.apk) and tap the "Install" button to begin the install process.
 
-![](/img/channel/android1.png)
+![](/img/channel/android1.jpg)
 
 2. If prompted to install unknown sources, tap Settings:
 
-![](/img/channel/android2.png)
+![](/img/channel/android2.jpg)
 
 3. Tap Unknown sources:
 
-![](/img/channel/android3.png)
+![](/img/channel/android3.jpg)
 
 4. Tap OK:
 
-![](/img/channel/android4.png)
+![](/img/channel/android4.jpg)
 
 5. Once the install process is complete, tap the "open" button to open the application.
 
-![](/img/channel/android5.png)
+![](/img/channel/android5.jpg)
 
 6. Take note of your claim code; it will link your Android phone to your account.
 
-![](/img/channel/android6.png)
+![](/img/channel/android6.jpg)
 
 7. Now on your computer, sign-in to the platform website to add the phone to your account.
 
