--- a/en/contacts/04.03- Add, Edit and Priorize the Contacts Addresses.md
+++ b/en/contacts/04.03- Add, Edit and Priorize the Contacts Addresses.md
@@ -1,6 +1,6 @@
 The contacts addresses are a kind of contact field as name and groups. The contacts addresses can be added, edit and prioritize when you actualize the contact dialog box accessed through the “Edit” option on each contact configurations.
 
-INSERT A PRINT
+![](/img/contact/edit.png)
 
 #### How add a contact? ####
 
@@ -8,7 +8,7 @@ The “Add Connection” menu provides an entry that you can add a lot of kinds 
 The plataform recognize the first address as the most import, that is a good indicator for the out messages. Let's imagine that your account has a phone number, Twitter and Telegram channels connected and you are going to send messages to 3 contacts, each one with a different priority.
 The channel that corresponds to the address priority of each contact that will send them a message. In other words, if you have 3 channels of solicitation message process of 1 sent; your Twitter channel will send for the contacts with priority on this channel, your Telegram channel will send for the contacts with priority on this channel, and the process repeats for all channels. On the contrary, the channel priority behavior still the same: the priorized contact address will dictate what kind of messages the contact will receive.
 
-INSERT A PRINT
+![](/img/contact/add.png)
 
 #### How to prioritize a contact? ####
 If you have a lot of channels in the same category connected on your account, the last channel used by your contact will be prioritized. The contacts will be connected to a relationship with a specific channel (they will just receive the messages from this channel) if each of these conditions happens:
@@ -18,17 +18,17 @@ If you have a lot of channels in the same category connected on your account, th
 - Using a Imported Contact
 - The contacts can be imported with a different address, but just an address for each type.
 
-INSERT A PRINT
+## Using a imported contact## 
+
+The contacts can be imported from different kinds of address, but just one address for each kind.
+
+![](/img/contact/use.png)
 
 #### How to actualize a contact? ####
 You can actualize the contacts information, including the contact field and the value of his importation. The contacts addresses are kinds of standard value, can be added, but not replaced through an importation if the UUID column contains UUID(s) contact(s).
 You can actualize the contacts information, including the contact field and the value of his importation. The contacts addresses are kinds of standard value, can be added, but not replaced through an importation if the UUID column contains UUID(s) contact(s).
 UUIDs contacts can be acquired through contacts exportations (UUIDs are included in all contacts exportation) or using the lists consult on the API Explorator. You just need to login your account, add the appropriate parameter to filter the contacts that you want to be found (or leave the consult gaps with blank space to consult your contacts), then click on “GET” button.
 
-INSERT A PRINT
+![](/img/contact/get.png)
 
 The plataform will return all the information associated with your contact (s), including your UUID(s).
-
-**Replacing Addresses**
-
-At this moment, the contacts addresses only can be replaced through the contacts API endpoint or through a contact profile mentioned above.
