--- a/en/contacts/04.04-Adding New Fields.md
+++ b/en/contacts/04.04-Adding New Fields.md
@@ -3,8 +3,15 @@ All contacts can be attributed to some attributes called contact fields, they ha
 #### To add a new field you should: ####
 
 1. Nav to the contacts, click on the “Manage Fields” button
+
+![](/img/contact/contact.png)
+![](/img/contact/manage_fields.png)
+
 2. Type the contacts field name that you want to add to a blank space;
 3. Select the kind of value that this field will get (text, number, date/time).
+
+![](/img/contact/manage_fields2.png)
+
 4. After that, you can add a contact field, consult his value using the variable @contact[fields name]. For example, the field “age” on the tutorial below can be referenced using @contact.age.
 
 #### Actualize the field value: ####
