Update 04.07-Looking for Contacts.md

--- a/en/contacts/04.07-Looking for Contacts.md
+++ b/en/contacts/04.07-Looking for Contacts.md
@@ -3,7 +3,8 @@ Besides searching contacts for the name or phone number, you can consult using t
 #### Consulting ####
 The consults that you will do, operates all contacts fields presents in your account. Notice that the fields and values are not case sensitive (do not differ capital letters and lowercase) on the consult.
 
-INSERT A PRINT
+![](/img/contact/consulting.png)
+![](/img/contact/consulting_2.png)
 
 #### Operators ####
 On the consult demonstrated above, there is a reference to a contact field called “Age” and using the operators “more or equals to ” “> =” and “minor or equals to” ‘<=’ to specify the wanted characteristics of the contacts that you are looking for. Look that, with the contacts fields that contain two or more words, the spaces need to be replaced for underline, for example, id_number = 409328.
