--- a/en/contacts/04.09-Importing Contacts.md
+++ b/en/contacts/04.09-Importing Contacts.md
@@ -9,30 +9,29 @@ The contacts importation allows you to add an entire groups to the platform usin
 
 *Observe that, when you want to import a date value to Ilhapush but without a time value, the Ilhapush will atributte a 00:00 time value.Although, to add manually just a data value to each contact field, the Ilhapush will replace the correspondent time value with the time moment that you actualized the field.*
 
-INSERT A PRINT
+![](/img/contact/import_contact.png)
 
 **To import contacts:**
 
 1. Go to Contacts;
+
+![](/img/contact/contact.png)
+
 2. Click on “Import Contacts” button;
 
-INSERT A PRINT
+![](/img/contact/contacts.png)
 
 3. Download and edit the provided model (or you can choose your file) and send using the button “Choose a file”;
-4. Confirm all personalized fields presents on your importation spreadsheet and choose the type of the field: Text, Number, Date/Time. Certify to verify the box(s) correspondents to the field that you want to import.
 
-INSERT A PRINT
+![](/img/contact/import_contact.png)
+
+4. Confirm all personalized fields presents on your importation spreadsheet and choose the type of the field: Text, Number, Date/Time. Certify to verify the box(s) correspondents to the field that you want to import.
 
 **Importing types of addresses:**
 
 The contacts can be imported with different addresses, but just one address for each type:
 
-INSERT A PRINT
+- The contacts addresses can be added through an importation if the UUID column contains contacts UUID(s). The UUIDs can be obtained through a contacts exportation or using a contacts list on the API Explorator:
 
-The contacts addresses can be added through an importation if the UUID column contains contacts UUID(s). The UUIDs can be obtained through a contacts exportation or using a contacts list on the API Explorator:
+- Exported contacts contained the UUIDs for their contacts, names, addresses and personalized fields. To exports, your contacts, go to Contacts guide, go to configure menu icon and select “Export”.
 
-INSERT A PRINT
-
-Exported contacts contained the UUIDs for their contacts, names, addresses and personalized fields. To exports, your contacts, go to Contacts guide, go to configure menu icon and select “Export”.
-
-INSERT A PRINT
