Update 09.05- Reference Functions.md

--- a/en/expressions/09.05- Reference Functions.md
+++ b/en/expressions/09.05- Reference Functions.md
@@ -344,7 +344,7 @@ Extract a subchain of words that start in the beginner, until, but not including
 ## Problems Solution ##
 
 **Why is only part of my expression evaluated?**
-If the expression is not the only function or variable call, so you should put them into the brackets to RapidPro know where it starts and finishes, for example, 
+If the expression is not the only function or variable call, so you should put them into the brackets the platform know where it starts and finishes, for example, 
 
 - @ (SUM (contact.reports, step.value)) * 2 <- o “* 2” is not evaluated, should be written as: 
 - @ (SUM (contact.reports, step.value) * 2)
