--- a/en/messages/03.02-Archived Messages.md
+++ b/en/messages/03.02-Archived Messages.md
@@ -1,6 +1,9 @@
 Like your email, the platform allows you to archive the inbox messages while the outbox messages are kept to verify the messages sender through the channels connected with the account. To archive the received messages: 
 
 1. Click on the messages icon on the left of your screen;
+
+![](/img/messages/msg7.png)
+
 2. Select the box on the left of your message that you want to archive;
 3. Click on the archive icon;
 
