--- a/en/messages/03.03-Exporting Messages.md
+++ b/en/messages/03.03-Exporting Messages.md
@@ -2,8 +2,12 @@ The message can be exported from a spreadsheet to be validated for the platform.
 
 1. Click on the message icon;
 
+![](/img/messages/msg7.png)
+
 2. Click on the exportation box on the top right of the messages list;
 
 3. Select the contacts groups containing the messages that you want to export, after that, choose the starter and finished date to establish the gap to select the messages.
+
+![](/img/messages/msg8.png)
 
 4. You will receive an email on your email address associated with your platform account containing a link to download security with your username and password. 
