--- a/en/messages/03.04-Labeling Messages.md
+++ b/en/messages/03.04-Labeling Messages.md
@@ -2,6 +2,8 @@ The platform allows adding labels to classify the answers. You can create your o
 
 1. Click on the messages guide;
 
+![](/img/messages/msg7.png)
+
 2. Select the messages left box that you want to label;
 
 3. Click on the “Add label” icon;
