--- a/en/messages/03.07-Adding Audio to the Message.md
+++ b/en/messages/03.07-Adding Audio to the Message.md
@@ -1,9 +1,54 @@
-You can add your own audio to your messages using a microphone or your headphone and recording yourself using the QuickTime or the Windows Sound Recorder. When your messages are recorded, access the website media.io to convert your audios to WAV, after that, click on the microphone icon on the bottom right of the messages to add in your flow.
+There are two different ways to add a audio to your message, using a audio URL or upload a audio from your computer.
 
-INSERT A PRINT
+Using Audio URL
 
-After the upload, you can click on the play button located on the bottom right to listen to the recorder.
+1. Click on flow icon;
 
-INSERT A PRINT
+![](/img/messages/msg13.png)
 
-If you prefer, IVONA is a great platform to read the texts in different languages. 
+2. Choose a pre existing flow or create a new one;
+
+3. Add an Action Set, and click on the attach icon on the bottom right;
+
+![](/img/messages/msg14.png)
+
+4. Click on attach URL;
+
+![](/img/messages/msg15.png)
+
+5. Click on Audio on the drop-down menu;
+
+![](/img/messages/msg16.png)
+
+6. You can insert the audio URL, after that you can call the audio using the variable @extra.attachment_url.
+
+## Upload an Audio from your computer ##
+
+1. Click on flow icon;
+
+​
+
+​
+
+​
+
+2. Choose a pre existing flow or create a new one;
+
+3. Add a Action Set, and click on the attach icon on the bottom right;
+
+​
+
+​
+
+​
+
+4. Click on attach file;
+
+​
+
+​
+
+​
+
+5. Choose the file from your computer.
+
