Update 03.07-Adding Audio to the Message.md

--- a/en/messages/03.07-Adding Audio to the Message.md
+++ b/en/messages/03.07-Adding Audio to the Message.md
@@ -26,29 +26,17 @@ Using Audio URL
 
 1. Click on flow icon;
 
-​
-
-​
-
-​
+![](/img/messages/msg13.png)
 
 2. Choose a pre existing flow or create a new one;
 
 3. Add a Action Set, and click on the attach icon on the bottom right;
 
-​
-
-​
-
-​
+![](/img/messages/msg14.png)
 
 4. Click on attach file;
 
-​
-
-​
-
-​
+![](/img/messages/msg15.png)
 
 5. Choose the file from your computer.
 
