--- a/en/flows/06.01-Flow Introduction.md
+++ b/en/flows/06.01-Flow Introduction.md
@@ -1,10 +1,10 @@
 Flow is the conditional logical tree visual representation applied for your contacts when they are in the flow. When the contact is in a flow, they interact directly with the steps. The steps are composed by Action commands, Rules commands and determine the flow length, that can be a simple and short flow or a complex and extensive flow.
 
-INSERT A PRINT
+![](/img/flow/flow1.png)
 
 #### Action Commands ####
 
-INSERT A PRINT
+![](/img/flow/flow2.png)
 
 **The action command “ActionSet” represents some operations done in your flow. Essentially, these are commands that allow you:**
 - Send an SMS answer “SMS response” (standard to “send a message”: action – will send a message to the actives contacts to reach this flows step);
@@ -31,11 +31,11 @@ INSERT A PRINT
 
 **RuleSet Anatomy**
 
-INSERT A PRINT
+![](/img/flow/flow3.png)
 
 Rule Sets comprehend 5 entries that allow you to build a powerful conditional instruction:
 
-INSERT A PRINT
+![](/img/flow/flow4.png)
 
 1. The type of rule set that you would like to build:
  - “Wait for response”: Wait for the user answer, after that, evaluate according to the created rules.
@@ -49,13 +49,13 @@ INSERT A PRINT
 
 3. “Response Rules”: evaluate the selected operator. Response Rules are executed from left to right. The first rule correspondent starts. RapidPro combines one word per time and just one individually rule on the original string order. 
 
-INSERT A PRINT
+![](/img/flow/flow5.png)
 
 4. The answer rules value(s) will try to correspond the operator. Looking the example above, we create a rule set that tries to correspond to the cities from Alagoas. Using the “Wait for response” rule set the answer selected “has any of these words”, the received answers will be placed on the category named  “Alagoas” if this corresponds to some listed word. This allows us to place the answer “I live in Maceió” on the category “Alagoas” because the word “Maceió” is contained on the rule. Notice that flow will always be correspondent at least one rule.
 
 5. The category where the contacts are located if the answer corresponds to a correspondent answer rule. The categories are the way where the connections can be guided to new steps, orienting the contact.
 
-INSERT A PRINT
+![](/img/flow/flow6.png)
 
 6. The name given to the created variable “flow” is filled for a rule set. On the example above, the rule command will save the evaluation result for the flow variable @flow.state.
 
@@ -67,11 +67,11 @@ When someone is at this point in the flow, wait for an answer. If the answer con
 Flows are exclusive spaces where your contacts will get in and get out. When the contact is on the flow, it becomes a flow active member until the contact goes out of the flow. Passages through flow from entry to exit - it is all activity that happens in the middle- constitutes a “race”. Races and activities happened into the flow are exposed as a flow result. “Races” flow can be listed and started externally through an API.
 The active members' number is represented by the blue button located on the top left of each rule set.
 
-INSERT A PRINT
+![](/img/flow/flow7.png)
 
 You can click on the icon to see the active contacts names on this step and, if necessary, send them an accompaniment message.
 
-INSERT A PRINT
+![](/img/flow/flow8.png)
 
 #### Getting in a Flow ####
 **You can put them in a flow using the button “Start the Flow” on the flows editor;**
@@ -88,7 +88,7 @@ INSERT A PRINT
 - Passe for an action that starts another flow;
 - If the flow participation expired after a determined time of definitely inactivity on the flow dialog actualization into the flow editor.
 
-INSERT A PRINT
+![](/img/flow/flow9.png)
 
 #### Members Rules Flow ####
 The contacts will interact with a flow one-by-one. If contact is simultaneously located in more than one flow, the answers will be processed in the most recent flow. While a contact is active in a flow, the answers are processed exclusively for the active flow on the moment until the user goes out or the time limit.
@@ -101,4 +101,4 @@ We recommend building a vertical flow. The flow editor is projected to support t
 3. Segment your Flows
 If the flow is very large, consider dividing it in other flows using the rule command “Start another flow”.
 
-INSERT A PRINT
+![](/img/flow/flow10.png)
