Update 06.02-Types of Flows.md

--- a/en/flows/06.02-Types of Flows.md
+++ b/en/flows/06.02-Types of Flows.md
@@ -1,6 +1,6 @@
 The platform provides three types of flows that are available according to the channel capacity when you are connected to your flow. Text messages flows are applied to SMS channels and social networking, as the Surveyor application, while the voice flows have a different structure. The type of flow is chosen during the flow creation.
 
-INSERT A PRINT
+![](/img/flow/flow11.png)
 
 **Text Message (Messaging)**
 
