Update 06.03-Creating a New Flow.md

--- a/en/flows/06.03-Creating a New Flow.md
+++ b/en/flows/06.03-Creating a New Flow.md
@@ -1,6 +1,12 @@
-To create a flow, go to the guide “flows” and click on the button “Create a flow”.
+To create a flow:
 
-INSERT A PRINT
+1. go to the guide “flows” 
+
+![](/img/flow/flow12.png)
+
+2. click on the button “Create a flow”.
+
+![](/img/flow/flow13.png)
 
 **The dialog box “Create a Flow” will appear, so you can:**
 - Define the flows name;
@@ -17,4 +23,4 @@ While the flow builds, we recommend drawing your flow vertically. The flow edito
 2. Segment your Flow
 If the flow that you want to build is large, consider dividing it in various flows using a rule set to start other flow action.
 
-INSERT A PRINT
+![](/img/flow/flow14.png)
