Update 06.04-Know the Flow Editor.md

--- a/en/flows/06.04-Know the Flow Editor.md
+++ b/en/flows/06.04-Know the Flow Editor.md
@@ -1,4 +1,5 @@
-INSERT A PRINT
+
+![](/img/flow/flow15.png)
 
 #### Flow Editor Anatomy ####
 
@@ -14,7 +15,7 @@ This button opens the steps editors, that comprehends two distinct dialogs: The 
 
 The actions editor starts with the action Send Message, although you can click on the drop-down menu to alter a lot of actions dialogs. To access the split editor, click on the ramification icon on the top right of the action editor.
 
-INSERT A PRINT
+![](/img/flow/flow16.png)
 
 - Split Editor
 
@@ -45,8 +46,8 @@ Click on the results options to see the results connected to the editing flow.
  4. Adjust the flow expiration window;
  5. Define that the flow ignores triggers when the contact is already on the flow.
 
-INSERT A PRINT
- 
+![](/img/flow/flow17.png) 
+
 #### Copy ####
 
 Click on this option to make an identical copy of the editing flow.
@@ -59,7 +60,7 @@ Click on this option to export a flow that you are editing as a JSON file.
 
 Click on this option to visualize the review historical flow that you are editing. Click on a review to see the flow version or return to that point.
 
-INSERT A PRINT
+![](/img/flow/flow18.png)
 
 #### Delete ####
 Click on this option to delete the flow that you are editing.
@@ -68,4 +69,4 @@ Click on this option to delete the flow that you are editing.
 
 Click on this button to put the contacts on the flow. You can add specifics contacts or groups. Select the “Restart any contacts above that are on the flow” if you want to restart the actives members on the flow.
 
- INSERT A PRINT
+![](/img/flow/flow19.png)
