--- a/en/flows/06.05- Defining Keywords for a flow.md
+++ b/en/flows/06.05- Defining Keywords for a flow.md
@@ -2,15 +2,21 @@ You can attribute keyword(s) to a flow to allow your contacts to start a flow us
 
 #### To attribute a keyword in a flow: ####
 
-1. Go to the “flow” and choose a flow.
+1. Go to the “flow” 
 
-2. Select “Edit” on the configuration icon on the top right of the flow editor.
+![](/img/flow/flow20.png)
 
-INSERT A PRINT
+2. Choose a flow.
 
-3. Add a keyword(s). Notice that this option is not case sensitive (doesn't differ upper and lower case), for example, Register and register are processed in the same way.
+![](/img/flow/flow21.png)
 
-INSERT A PRINT
+3. Select “Edit” on the configuration icon on the top right of the flow editor.
+
+![](/img/flow/flow22.png)
+
+4. Add a keyword(s). Notice that this option is not case sensitive (doesn't differ upper and lower case), for example, Register and register are processed in the same way.
+
+![](/img/flow/flow23.png)
 
 #### Ignoring triggers ####
 
