Update and rename 06.07- Action Commands.md to 06.07- Action Set.md

--- a/en/flows/06.07- Action Set.md
+++ b/en/flows/06.07- Action Set.md
@@ -1,4 +1,4 @@
-INSERT A PRINT
+![](/img/flow/flow24.png)
 
 An Action Command represents some actions done in name of the flow. Essentially, they are commands that allow you:
 
@@ -16,19 +16,19 @@ An Action Command represents some actions done in name of the flow. Essentially,
 
 Action commands comprehend actions that are executed immediately, on the top-down order:
 
-INSERT A PRINT
+![](/img/flow/flow25.png)
 
 #### Creating Action Sets ####
 
 Click on the box “Create Message” to open the action editor illustrated on the photo below, or create a connection using the existing step.
 
-INSERT A PRINT
+![](/img/flow/flow26.png)
 
 #### Adding an Action Set to an Existing Action Set ####
 
 The actions can be connected to others Action Sets or be added as a step. Actions connected to other actions are immediately executed top-down.
 
-INSERT A PRINT
+![](/img/flow/flow27.png)
 
 On the example below, three actions are grouped to register a new contact. When a contact pass by this step, the actions happens on the order that they are organized.
 
@@ -38,8 +38,6 @@ On the example below, three actions are grouped to register a new contact. When 
 
 To add an action to an existing Action Set, click on the symbol “+” on the button right of the existing action and select an action on the action editor.
  
-INSERT A PRINT
-
 #### Deleting an Action ####
 
 To delete an action, move the cursor on the action that you want to delete and click on the “x” icon. The action will become red and will request a deleting confirmation. Click on the “x” icon again to conclude the deleting process.
