Update 06.11-Classifing and Deleting Contacts in Groups.md

--- a/en/flows/06.11-Classifing and Deleting Contacts in Groups.md
+++ b/en/flows/06.11-Classifing and Deleting Contacts in Groups.md
@@ -1,17 +1,23 @@
-#### Adding contacts to a group ####
+## Adding contacts to a group ##
 
-Use the action “Add contact to a group” to add contacts to a group from a flow.
+1. Go to the flow editor;
 
-INSERT A PRINT
+2. Click on and drag the red box on the action;
 
-On the example below, we are adding the users who selected Alagoas as a State. This allows us to follow up the users who want to know more about Alagoas.
+3. Use the action “Add contact to a group” to add contacts to a group from a flow.
 
-Insert a Print
+![](/img/flow/flow31.png)
 
-#### Deleting Contacts from a Group ####
+4. You can choose one or more groups to enter contacts.
+
+![](/img/flow/flow32.png)
+
+## Deleting Contacts from a Group ##
 
 Use the “Remove contact from a group” to remove a contact from a group on the flow.
 
-Insert a print
+![](/img/flow/flow33.png)
 
-On the example above, we are removing users from a group if they don't confirm is want to receive information.
+Choose the group(s) that you want to remove the contact from.
+
+![](/img/flow/flow34.png)
