Update 06.16- Rule Set.md

--- a/en/flows/06.16- Rule Set.md
+++ b/en/flows/06.16- Rule Set.md
@@ -7,13 +7,13 @@ Rule Set are connection points on a flow. They are conditional declarations allo
 - An expression
 - Rule Set Anatomy
 
-INSERT A PRINT
+![](/img/flow/flow48.png)
 
 Rule Sets comprehends 5 entries that allow building a powerful conditional instruction:
 
 1. The type of rule set that you would like to create:
 
-INSERT A PRINT
+![](/img/flow/flow49.png)
 
 “Wait for response”: wait for a user response, after that, evaluate according to the created rules.
 
@@ -32,13 +32,13 @@ INSERT A PRINT
 2. According to the selected command, this is the value that the rules are evaluated. This value, call an operator, represented for a variable or expression. The ruleset on the picture above, “if the response message ..” indicates that the operator is @step.value or a received message.
 3. Response Rules: evaluate the selected operator. Response rules are executed from left to right. The first rule that corresponds is used and not the other rules, that will be evaluated after that. RapidPro combines each word just once and just to an individual rule in the original string order.
 
-INSERT A PRINT
+![](/img/flow/flow50.png)
 
 4. The response from your values rules will try to correspond to the operator. On the example above, we create a ruleset trying to correspond to the name of each city from Alagoas. Using the “Wait for response” ruleset the selected answer from “has any of these words”, the received answer will be located on a category called “Alagoas” if it corresponds to any listed word. This allows us to write the answer “I live in Maceió” on the category “Alagoas” because the word “Maceió” is on the rule. Notice that, a flow will always correspond at least a response rule.
 
 5. The category where your contacts are located with the answer corresponds to the correspondent response rule. The categories are ways where the connections can the guided to the new step.
 
-INSERT A PRINT
+![](/img/flow/flow51.png)
 
 6. The name gave to the created flow variable is filled for a ruleset. On the example above, the ruleset will save the evaluation result for the flow variable @flow.state.
 The entries above result on the following conditional declaration:
@@ -49,7 +49,7 @@ You can look that the dialog box from the split response set is blue, while the 
 
 **Actives:**
 
-INSERT A PRINT
+![](/img/flow/flow52.png)
 
 Split responses are actives. They need a contact response, with a value to be evaluated (contact response) is not initially knew.
 
